--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                            
     <a class="nav-link" aria-current="page" href="https://yuin7789.github.io/website3/">홈</a>
  
-    <a class="nav-link active" href="#">포트폴리오</a>
+    <a class="nav-link active" href="https://yuin7789.github.io/website/">포트폴리오</a>
 
     <a class="nav-link" href="https://yuin7789.github.io/website2/">기타</a>
                         </li>
